# aws-finops-mcp-server

./: .bedrock_agentcore.yaml  .dockerignore  .gitignore  AGENTCORE_ARCHITECTURE.md  AGENTCORE_COMPARISON.md  AGENTCORE_DEPLOYMENT_FINAL.md  AGENTCORE_QUICKSTART.md  AGENTCORE_RUNTIME_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BEDROCK_AGENTCORE_DEPLOYMENT.md  CATEGORY_QUICK_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.agentcore  GETTING_STARTED.md  IAM_SETUP_GUIDE.md  LICENSE  MANUAL_AGENTCORE_DEPLOY.md  MIGRATION_GUIDE.md  QUICK_FIX_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  REMOTE_ACCESS_GUIDE.md  TOOLS_REFERENCE.md  TOOL_CATEGORIES.md  ami-update-scripts.sh  create-ecr-repo.sh  deploy-to-agentcore.sh  docker-compose-http.yml  docker-compose.yml  docker-run.sh  generate_all_tools.sh  generate_tool_template.py  mcp-http-client-auth.py  mcp-http-client.py  pyproject.toml  (+9 more)
examples/: CATEGORY_USE_CASES.md  mcp_config.json  test-remote-connection.sh  tool_usage.md
examples/category-configs/: all-tools.json  cleanup-only.json  cost-focused.json  security-audit.json
examples/client-configs/: https-config.json  ssh-tunnel-config.json
examples/mcp-client-configs/: http-localhost.json
generated-diagrams/: README.md
iam-policies/: QUICK_REFERENCE.md  README.md  finops-cost-only-policy.json  finops-cross-account-role.json  finops-full-policy.json  finops-minimal-policy.json  finops-readonly-policy.json
tests/: __init__.py  test_helpers.py  test_session.py
(+38 files in other folders)
